--- a/manuscripts/LDP_Project_CharlotteHR_Manuscript.Rmd
+++ b/manuscripts/LDP_Project_CharlotteHR_Manuscript.Rmd
@@ -1,1 +1,45 @@
 
+---
+title: "LDP Project Manuscript: Do species in the genus _Cheniella_ (Fabaceae) belong to the rainforest biome?"
+author: "Charlotte Hagelstam Renshaw"
+date: '2022-09-16'
+output: pdf_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(dplyr)
+library(ggplot2)
+library(raster)
+library(sp)
+```
+
+**Title**: DP Project Manuscript: Do species in the genus _Cheniella_ (Fabaceae) belong to the rainforest biome?
+
+Charlotte Hagelstam Renshaw^1^
+
+1.  University of Montreal
+
+
+\newpage
+
+## Abstract
+
+We will use cleaned species occurrence data downloaded from herbaria databases as well as global biome maps to study the distribution of the pantropical legume subfamily Cercidoideae (Fabaceae). 
+
+## Introduction
+
+Citation: 
+
+## Methods
+
+Dataset were downloaded by genus from https://www.gbif.org/ and then cleaned in R using the dplyr, raster, sp, ggplot2 and tidyverse packages. Cleaned datasets were compared to the rainforest biome map using the extract function in the raster package.
+
+## Results
+
+## Discussion
+
+## Conclusion
+
+## References
